--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<title>BTS PREVERT</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-	<script src="parallax.min.js"></script>
-   <script src="parallax.js" rel="stylesheet"></script>
+   <script src="jquery.js"></script>
+   <script src="parallax.js"></script>
+	<script src="main.js"></script>
 </head>
 
 
